--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -4559,4 +4559,43 @@ body {
 .careers-linkedin-logo a {
   display: block; }
 
+.iconAdd {
+  position: fixed;
+  bottom: 15px;
+  right: 15px;
+  z-index: 100;
+  display: block;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: 5px solid rgba(255, 255, 255, 0.25);
+  background-color: rgba(255, 255, 255, 0.8);
+  overflow: hidden;
+  line-height: 50px;
+  font-size: 35px;
+  text-align: center;
+  color: #3B5997;
+  transition: all 0.3s ease-in-out; }
+  .iconAdd:hover {
+    background-color: #3B5997;
+    color: #fff; }
+
+.iconHotline {
+  color: #CF2026; }
+  .iconHotline:hover {
+    background-color: #CF2026;
+    color: #fff; }
+
+.hl-page {
+  padding: 20px 0 0; }
+  .hl-page p {
+    margin: 0 0 25px; }
+    .hl-page p strong {
+      display: block;
+      margin-bottom: 8px;
+      text-transform: uppercase; }
+    .hl-page p span {
+      color: red;
+      font-size: 30px; }
+
 /*# sourceMappingURL=theme.css.map */
