--- a/assets/sass/theme.scss
+++ b/assets/sass/theme.scss
@@ -4868,4 +4868,49 @@
      .careers-linkedin-logo a{
          display:block;
     }
-     
+  
+.iconAdd{
+    position: fixed;
+    bottom:15px;
+    right:15px;
+    z-index: 100;
+    display: block;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: 5px solid rgba(#fff, 0.25);
+    background-color: rgba(#fff, 0.8);
+    overflow: hidden;
+    line-height: 50px;
+    font-size: 35px;
+    text-align: center;
+    color:#3B5997;
+    transition:all 0.3s ease-in-out;
+    &:hover{
+        background-color: #3B5997;
+        color:#fff;
+    }
+}
+.iconHotline{
+    color:#CF2026;
+    &:hover{
+        background-color: #CF2026;
+        color:#fff;
+    }
+}
+.hl-page{
+    padding:20px 0 0;
+    p{
+        margin:0 0 25px;
+        strong{
+            display: block;
+            margin-bottom: 8px;
+            text-transform: uppercase;
+        }
+        span{
+            color:red;
+            font-size: 30px;
+        }
+    }
+}
+
