--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -4,7 +4,7 @@
 /* Berling & Trade Gothic */
 /* * Berling */
 @font-face {
-  font-family: "Berling LT W01 Roman";
+  font-family: "Roboto Condensed";
   src: url("../fonts/Berling-LT-W01-Roman/Berling-LT-W01-Romand41d.eot?#iefix");
   src: url("../fonts/Berling-LT-W01-Roman/Berling-LT-W01-Romand41d.eot?#iefix") format("eot"), url("../fonts/Berling-LT-W01-Roman/Berling-LT-W01-Roman.woff2") format("woff2"), url("../fonts/Berling-LT-W01-Roman/Berling-LT-W01-Roman.woff") format("woff"), url("../fonts/Berling-LT-W01-Roman/Berling-LT-W01-Roman.ttf") format("truetype"), url("../fonts/Berling-LT-W01-Roman/Berling-LT-W01-Roman.svg#Berling-LT-W01-Roman") format("svg"); }
 /* * Trade Gothic */
@@ -16,6 +16,26 @@
   font-family: "TradeGothic W01 BoldCn";
   src: url("../fonts/TradeGothic-W01-BoldCn/TradeGothic-W01-BoldCnd41d.eot?#iefix");
   src: url("../fonts/TradeGothic-W01-BoldCn/TradeGothic-W01-BoldCnd41d.eot?#iefix") format("eot"), url("../fonts/TradeGothic-W01-BoldCn/TradeGothic-W01-BoldCn.woff2") format("woff2"), url("../fonts/TradeGothic-W01-BoldCn/TradeGothic-W01-BoldCn.woff") format("woff"), url("../fonts/TradeGothic-W01-BoldCn/TradeGothic-W01-BoldCn.ttf") format("truetype"), url("../fonts/TradeGothic-W01-BoldCn/TradeGothic-W01-BoldCn.svg#TradeGothic-W01-BoldCn") format("svg"); }
+/* Roboto */
+@font-face {
+  font-family: "Roboto Condensed";
+  font-weight: 400;
+  src: url("../fonts/Roboto/RobotoCondensed-Regular.eot?#iefix");
+  src: url("../fonts/Roboto/RobotoCondensed-Regular.eot?#iefix") format("eot"), url("../fonts/Roboto/RobotoCondensed-Regular.woff2") format("woff2"), url("../fonts/Roboto/RobotoCondensed-Regular.woff") format("woff"), url("../fonts/Roboto/RobotoCondensed-Regular.ttf") format("truetype"), url("../fonts/Roboto/RobotoCondensed-Regular.svg") format("svg"); }
+@font-face {
+  font-family: "Roboto Condensed";
+  font-style: italic;
+  src: url("../fonts/Roboto/RobotoCondensed-Italic.eot?#iefix");
+  src: url("../fonts/Roboto/RobotoCondensed-Italic.eot?#iefix") format("eot"), url("../fonts/Roboto/RobotoCondensed-Italic.woff2") format("woff2"), url("../fonts/Roboto/RobotoCondensed-Italic.woff") format("woff"), url("../fonts/Roboto/RobotoCondensed-Italic.ttf") format("truetype"), url("../fonts/Roboto/RobotoCondensed-Italic.svg") format("svg"); }
+@font-face {
+  font-family: "Roboto Condensed";
+  font-weight: 700;
+  src: url("../fonts/Roboto/RobotoCondensed-Bold.eot?#iefix");
+  src: url("../fonts/Roboto/RobotoCondensed-Bold.eot?#iefix") format("eot"), url("../fonts/Roboto/RobotoCondensed-Bold.woff2") format("woff2"), url("../fonts/Roboto/RobotoCondensed-Bold.woff") format("woff"), url("../fonts/Roboto/RobotoCondensed-Bold.ttf") format("truetype"), url("../fonts/Roboto/RobotoCondensed-Bold.svg") format("svg"); }
+@font-face {
+  font-family: "TradeGothic W01 BoldCn";
+  src: url("../fonts/Roboto/RobotoCondensed-Regular.eot?#iefix");
+  src: url("../fonts/Roboto/RobotoCondensed-Regular.eot?#iefix") format("eot"), url("../fonts/Roboto/RobotoCondensed-Regular.woff2") format("woff2"), url("../fonts/Roboto/RobotoCondensed-Regular.woff") format("woff"), url("../fonts/Roboto/RobotoCondensed-Regular.ttf") format("truetype"), url("../fonts/Roboto/RobotoCondensed-Regular.svg") format("svg"); }
 /* -------------------- Reset CSS -------------------- */
 /*---Reset Stylesheet---*/
 html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp, a, small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary, time, mark, audio, video {
@@ -928,52 +948,52 @@ a.icon, .icon > a:hover, .icon.active > a, .icon.hovering > a {
 /* -------------------- General CSS -------------------- */
 /* Titles */
 h1, h2, .title-large, .title-medium, .title-small {
-  font: 120px/140px "Berling LT W01 Roman", Arial, Helvetica, sans-serif;
+  font: 120px/140px "Roboto Condensed", Arial, Helvetica, sans-serif;
   color: #FFFFFF;
   margin-bottom: 92px; }
 
 h1, .title-medium {
-  font: 90px/92px "Berling LT W01 Roman", Arial, Helvetica, sans-serif;
+  font: 90px/92px "Roboto Condensed", Arial, Helvetica, sans-serif;
   margin-bottom: 40px; }
 
 h1, .title-medium-small {
-  font: 60px/62px "Berling LT W01 Roman", Arial, Helvetica, sans-serif;
+  font: 60px/62px "Roboto Condensed", Arial, Helvetica, sans-serif;
   margin-bottom: 30px; }
 
 h2, .title-small {
-  font: 40px/45px "Berling LT W01 Roman", Arial, Helvetica, sans-serif;
+  font: 40px/45px "Roboto Condensed", Arial, Helvetica, sans-serif;
   margin-bottom: 10px; }
 
 /*--- Large title ---*/
 @media screen and (max-width: 1400px), screen and (max-height: 670px) {
   .title-large {
-    font: 90px/92px "Berling LT W01 Roman", Arial, Helvetica, sans-serif;
+    font: 90px/92px "Roboto Condensed", Arial, Helvetica, sans-serif;
     margin-bottom: 72px; } }
 @media screen and (max-width: 1000px) {
   .title-large {
     margin-bottom: 52px; } }
 @media screen and (max-width: 740px), screen and (max-height: 480px) {
   .title-large {
-    font: 50px/52px "Berling LT W01 Roman", Arial, Helvetica, sans-serif;
+    font: 50px/52px "Roboto Condensed", Arial, Helvetica, sans-serif;
     margin-bottom: 32px; } }
 @media screen and (max-width: 600px) {
   .title-large {
-    font: 40px/42px "Berling LT W01 Roman", Arial, Helvetica, sans-serif;
+    font: 40px/42px "Roboto Condensed", Arial, Helvetica, sans-serif;
     margin-bottom: 22px; } }
 /*--- Medium title ---*/
 @media screen and (max-width: 740px) {
   h1, .title-medium, .title-medium-small {
-    font: 50px/52px "Berling LT W01 Roman", Arial, Helvetica, sans-serif; } }
+    font: 50px/52px "Roboto Condensed", Arial, Helvetica, sans-serif; } }
 @media screen and (max-width: 600px) {
   h1, .title-medium, .title-medium-small {
-    font: 40px/42px "Berling LT W01 Roman", Arial, Helvetica, sans-serif; } }
+    font: 40px/42px "Roboto Condensed", Arial, Helvetica, sans-serif; } }
 /*--- Small title ---*/
 @media screen and (max-width: 740px) {
   h2, .title-small {
-    font: 33px/37px "Berling LT W01 Roman", Arial, Helvetica, sans-serif; } }
+    font: 33px/37px "Roboto Condensed", Arial, Helvetica, sans-serif; } }
 @media screen and (max-width: 400px) {
   h2, .title-small {
-    font: 30px/31px "Berling LT W01 Roman", Arial, Helvetica, sans-serif; } }
+    font: 30px/31px "Roboto Condensed", Arial, Helvetica, sans-serif; } }
 /*--- Copy title ---*/
 /*@media screen and (max-width:740px){
      .copy h2, .copy .title-small{
@@ -1499,7 +1519,7 @@ body {
   float: left;
   clear: left;
   margin: 0 0 20px 0;
-  font: 40px/45px "Berling LT W01 Roman", Arial, Helvetica, sans-serif;
+  font: 40px/45px "Roboto Condensed", Arial, Helvetica, sans-serif;
   list-style: none;
   transition: opacity 1s ease-in-out;
   -webkit-transition: opacity 1s ease-in-out;
@@ -1557,7 +1577,7 @@ body {
     margin-left: 30px; } }
 @media screen and (max-width: 900px), screen and (max-height: 520px) {
   .main-menu li {
-    font: 30px/35px "Berling LT W01 Roman", Arial, Helvetica, sans-serif;
+    font: 30px/35px "Roboto Condensed", Arial, Helvetica, sans-serif;
     margin-bottom: 12px; }
 
   .dropdown-menu {
@@ -1579,7 +1599,7 @@ body {
     margin-right: 5%; } }
 @media screen and (max-width: 400px), screen and (max-height: 480px) {
   .main-menu li {
-    font: 25px/25px "Berling LT W01 Roman", Arial, Helvetica, sans-serif; }
+    font: 25px/25px "Roboto Condensed", Arial, Helvetica, sans-serif; }
 
   .dropdown-menu {
     left: 94px;
@@ -3187,13 +3207,13 @@ body {
 
 @media screen and (max-width: 1200px) {
   .portfolio h1, .portfolio h2 {
-    font: 30px/31px "Berling LT W01 Roman", Arial, Helvetica, sans-serif; } }
+    font: 30px/31px "Roboto Condensed", Arial, Helvetica, sans-serif; } }
 @media screen and (orientation: landscape) and (max-width: 750px) {
   .portfolio h1, .portfolio h2 {
-    font: 25px/26px "Berling LT W01 Roman", Arial, Helvetica, sans-serif; } }
+    font: 25px/26px "Roboto Condensed", Arial, Helvetica, sans-serif; } }
 @media screen and (orientation: landscape) and (max-width: 600px) {
   .portfolio h1, .portfolio h2 {
-    font: 21px/22px "Berling LT W01 Roman", Arial, Helvetica, sans-serif; } }
+    font: 21px/22px "Roboto Condensed", Arial, Helvetica, sans-serif; } }
 @media screen and (orientation: portrait) and (max-width: 1000px), screen and (orientation: landscape) and (max-width: 550px) {
   .portfolio {
     height: auto; }
@@ -3809,7 +3829,7 @@ body {
   text-shadow: 20px 0px 30px rgba(1, 1, 1, 0.3), -20px 0px 30px rgba(1, 1, 1, 0.3), 20px 20px 30px rgba(1, 1, 1, 0.3), 20px -20px 30px rgba(1, 1, 1, 0.3), -20px -20px 30px rgba(1, 1, 1, 0.3), -20px 20px 30px rgba(1, 1, 1, 0.3); }
 
 .portfolio-item-cover-info h1 {
-  font: 40px/45px "Berling LT W01 Roman", Arial, Helvetica, sans-serif;
+  font: 40px/45px "Roboto Condensed", Arial, Helvetica, sans-serif;
   position: relative;
   z-index: 1; }
 
@@ -3861,7 +3881,7 @@ body {
    transform:translateY(-50%);
   */
   color: #FFFFFF;
-  font: 22px/30px "Berling LT W01 Roman", Arial, Helvetica, sans-serif;
+  font: 22px/30px "Roboto Condensed", Arial, Helvetica, sans-serif;
   padding: 0 3em;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
