--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -9,7 +9,7 @@
   src: url("../fonts/Berling-LT-W01-Roman/Berling-LT-W01-Romand41d.eot?#iefix") format("eot"), url("../fonts/Berling-LT-W01-Roman/Berling-LT-W01-Roman.woff2") format("woff2"), url("../fonts/Berling-LT-W01-Roman/Berling-LT-W01-Roman.woff") format("woff"), url("../fonts/Berling-LT-W01-Roman/Berling-LT-W01-Roman.ttf") format("truetype"), url("../fonts/Berling-LT-W01-Roman/Berling-LT-W01-Roman.svg#Berling-LT-W01-Roman") format("svg"); }
 /* * Trade Gothic */
 @font-face {
-  font-family: "TradeGothic W01 Cn";
+  font-family: "Roboto Condensed";
   src: url("../fonts/TradeGothic-W01-Cn/TradeGothic-W01-Cnd41d.eot?#iefix");
   src: url("../fonts/TradeGothic-W01-Cn/TradeGothic-W01-Cnd41d.eot?#iefix") format("eot"), url("../fonts/TradeGothic-W01-Cn/TradeGothic-W01-Cn.woff2") format("woff2"), url("../fonts/TradeGothic-W01-Cn/TradeGothic-W01-Cn.woff") format("woff"), url("../fonts/TradeGothic-W01-Cn/TradeGothic-W01-Cn.ttf") format("truetype"), url("../fonts/TradeGothic-W01-Cn/TradeGothic-W01-Cn.svg#TradeGothic-W01-Cn") format("svg"); }
 @font-face {
@@ -1013,7 +1013,7 @@ h2, .title-small {
 */
 /* Headings */
 h3, .medium, .medium-bold {
-  font: 20px/25px "TradeGothic W01 Cn", Arial, Helvetica, sans-serif;
+  font: 20px/25px "Roboto Condensed", Arial, Helvetica, sans-serif;
   color: #FFFFFF;
   margin-bottom: 10px; }
 
@@ -1022,7 +1022,7 @@ h3, .medium, .medium-bold {
   font: 20px/25px "TradeGothic W01 BoldCn", Arial, Helvetica, sans-serif; }
 
 h4, .small, .small-bold {
-  font: 18px/20px "TradeGothic W01 Cn", Arial, Helvetica, sans-serif;
+  font: 18px/20px "Roboto Condensed", Arial, Helvetica, sans-serif;
   color: #CCCCCC;
   margin-bottom: 10px; }
 
@@ -1386,7 +1386,7 @@ html {
 
 body {
   height: 100%;
-  font: 18px/20px "TradeGothic W01 Cn", Arial, Helvetica, sans-serif;
+  font: 18px/20px "Roboto Condensed", Arial, Helvetica, sans-serif;
   color: #999999;
   background: #0F0F0F; }
 
@@ -1677,7 +1677,7 @@ body {
 .menu-label {
   float: left;
   padding-left: 12px;
-  font: 20px/20px "TradeGothic W01 Cn", Arial, Helvetica, sans-serif;
+  font: 20px/20px "Roboto Condensed", Arial, Helvetica, sans-serif;
   color: #FFFFFF;
   text-decoration: none;
   text-transform: uppercase; }
@@ -2280,7 +2280,7 @@ body {
 
 .home p {
   color: #FFFFFF;
-  font: 20px/25px "TradeGothic W01 Cn", Arial, Helvetica, sans-serif;
+  font: 20px/25px "Roboto Condensed", Arial, Helvetica, sans-serif;
   margin-left: calc(50% + 6px); }
 
 @media screen and (max-width: 1400px), screen and (max-height: 670px) {
@@ -3172,7 +3172,7 @@ body {
     margin-left: calc(33.33% + 4px); }
 
   .contact-location, .contact-footer {
-    padding-left: 70px; } }
+    padding-left: 20px; } }
 @media screen and (max-width: 1000px), screen and (max-height: 830px) {
   .contact-side {
     position: relative;
@@ -3202,7 +3202,7 @@ body {
   height: 100%; }
 
 .portfolio-index p {
-  font: 20px/25px "TradeGothic W01 Cn", Arial, Helvetica, sans-serif;
+  font: normal 16px/25px "Roboto Condensed", Arial, Helvetica, sans-serif;
   color: #FFFFFF; }
 
 @media screen and (max-width: 1200px) {
@@ -3334,7 +3334,7 @@ body {
 
   .portfolio-option p {
     display: none;
-    font: 18px/20px "TradeGothic W01 Cn", Arial, Helvetica, sans-serif; } }
+    font: 18px/20px "Roboto Condensed", Arial, Helvetica, sans-serif; } }
 /*--- Icon ---*/
 .portfolio-icon-wrapper {
   position: absolute;
@@ -3834,7 +3834,7 @@ body {
   z-index: 1; }
 
 .portfolio-item-cover-info h2 {
-  font: 18px/20px "TradeGothic W01 Cn", Arial, Helvetica, sans-serif;
+  font: 18px/20px "Roboto Condensed", Arial, Helvetica, sans-serif;
   text-transform: uppercase;
   margin-bottom: 0;
   position: relative;
@@ -4469,7 +4469,7 @@ body {
   font: 18px/20px "TradeGothic W01 BoldCn", Arial, Helvetica, sans-serif; }
 
 .team-person-role {
-  font: 18px/20px "TradeGothic W01 Cn", Arial, Helvetica, sans-serif;
+  font: 18px/20px "Roboto Condensed", Arial, Helvetica, sans-serif;
   color: #999999; }
 
 @media screen and (max-width: 1500px) {
@@ -4585,24 +4585,18 @@ body {
   right: 15px;
   z-index: 100;
   display: block;
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
   border: 5px solid rgba(255, 255, 255, 0.25);
   background-color: rgba(255, 255, 255, 0.8);
   overflow: hidden;
-  line-height: 50px;
-  font-size: 35px;
+  line-height: 40px;
+  font-size: 24px;
   text-align: center;
-  color: #3B5997;
+  color: #999;
   transition: all 0.3s ease-in-out; }
   .iconAdd:hover {
-    background-color: #3B5997;
-    color: #fff; }
-
-.iconHotline {
-  color: #CF2026; }
-  .iconHotline:hover {
     background-color: #CF2026;
     color: #fff; }
 
@@ -4617,5 +4611,80 @@ body {
     .hl-page p span {
       color: red;
       font-size: 30px; }
+
+.location-map {
+  overflow: hidden; }
+  .location-map iframe {
+    width: 100%; }
+
+.contact-side {
+  width: 40%;
+  float: left; }
+
+.contact-form {
+  position: relative;
+  top: 40%;
+  width: 60%;
+  float: left; }
+
+.wrapper-form {
+  margin: 30px 0;
+  max-width: 400px;
+  padding: 0 15px; }
+
+.wrapper-form .input-group-addon {
+  background-color: #e74c3c;
+  border-color: #e74c3c;
+  color: #fff; }
+
+.wrapper-form textarea.form-control {
+  max-width: 100%;
+  width: 100% !important;
+  min-height: 90px;
+  max-height: 120px; }
+
+.wrapper-form input[type=submit] {
+  width: auto;
+  background-color: #e74c3c;
+  border-color: #e74c3c;
+  color: #fff; }
+
+.wrapper-form input[type=submit]:hover {
+  background-color: #bf2718; }
+
+.form-group {
+  margin-bottom: 15px; }
+
+.form-control {
+  display: block;
+  width: 100%;
+  height: 34px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #555;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  -webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
+  -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+  transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s; }
+
+textarea.form-control {
+  height: auto; }
+
+button, html input[type="button"], input[type="reset"], input[type="submit"] {
+  -webkit-appearance: button;
+  cursor: pointer; }
+
+@media screen and (max-width: 980px) {
+  .contact-side, .location-map, .contact-form {
+    width: 100% !important; }
+
+  .wrapper-form {
+    padding: 0 20px !important; } }
 
 /*# sourceMappingURL=theme.css.map */
