--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -1524,7 +1524,8 @@ body {
   transition: opacity 1s ease-in-out;
   -webkit-transition: opacity 1s ease-in-out;
   -moz-transition: opacity 1s ease-in-out;
-  -o-transition: opacity 1s ease-in-out; }
+  -o-transition: opacity 1s ease-in-out;
+  max-height: 50px; }
 
 .main-menu li a {
   display: block;
