--- a/assets/sass/theme.scss
+++ b/assets/sass/theme.scss
@@ -1584,6 +1584,7 @@
      -webkit-transition: opacity 1s ease-in-out;
      -moz-transition: opacity 1s ease-in-out;
      -o-transition: opacity 1s ease-in-out;
+	 max-height: 50px;
 }
  .main-menu li a{
      display:block;
