--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -1524,8 +1524,9 @@ body {
   transition: opacity 1s ease-in-out;
   -webkit-transition: opacity 1s ease-in-out;
   -moz-transition: opacity 1s ease-in-out;
-  -o-transition: opacity 1s ease-in-out;
-  max-height: 50px; }
+  -o-transition: opacity 1s ease-in-out; }
+  .main-menu li.selected-fixed li {
+    max-height: 50px !important; }
 
 .main-menu li a {
   display: block;
