--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -1525,14 +1525,13 @@ body {
   -webkit-transition: opacity 1s ease-in-out;
   -moz-transition: opacity 1s ease-in-out;
   -o-transition: opacity 1s ease-in-out; }
-  .main-menu li.selected-fixed li {
-    max-height: 50px !important; }
 
 .main-menu li a {
   display: block;
   margin-bottom: 3px;
   color: #FFFFFF;
-  text-decoration: none; }
+  text-decoration: none;
+  max-height: 50px !important; }
 
 .main-menu li a:hover, .main-menu li.active a {
   color: #FFFFFF;
@@ -4600,16 +4599,20 @@ body {
     color: #fff; }
 
 .hl-page {
-  padding: 20px 0 0; }
+  padding: 10px 0 0; }
   .hl-page p {
-    margin: 0 0 25px; }
+    margin: 0 0 15px; }
     .hl-page p strong {
+      font-size: 14px;
       display: block;
-      margin-bottom: 8px;
+      margin-bottom: 5px;
       text-transform: uppercase; }
+      .hl-page p strong i {
+        margin-right: 10px; }
     .hl-page p span {
       color: red;
-      font-size: 30px; }
+      font-size: 18px;
+      line-height: 26px; }
 
 .location-map {
   overflow: hidden; }
