--- a/assets/sass/theme.scss
+++ b/assets/sass/theme.scss
@@ -1617,6 +1617,7 @@
  .dropdown-menu{
      position:absolute;
      left:170px;
+	 width:300px;
      margin-top:-43px;
      margin-left:60px;
      display:none;
