--- a/assets/sass/theme.scss
+++ b/assets/sass/theme.scss
@@ -3396,8 +3396,12 @@
      color:#FFFFFF;
 }
  @media screen and (max-width:1200px){
+	 .portfolio-option{
+		 padding-left:15px;
+		 padding-right:15px;
+	 }
      .portfolio h1, .portfolio h2{
-         font:30px/31px "Roboto Condensed", Arial, Helvetica, sans-serif;
+         font:26px/31px "Roboto Condensed", Arial, Helvetica, sans-serif;
     }
 }
  @media screen and (orientation: landscape) and (max-width:750px) {
@@ -3446,7 +3450,7 @@
  .portfolio-option{
      position:fixed;
      top:33%;
-     width:calc(15% - 8px);
+     width:calc(20% - 8px);
      height:40%;
      padding:0 5% 40px;
      margin-right: 12px;
@@ -3471,6 +3475,10 @@
         /*min-height:257px;
         */
     }
+	.portfolio-option{
+		 padding-left:15px;
+		 padding-right:15px;
+	 }
      .portfolio-option.portfolio-option-third{
          padding-bottom:0;
     }
@@ -3479,6 +3487,8 @@
      .portfolio-option{
          height:65%;
          top:25%;
+		 padding-left:15px;
+		 padding-right:15px;
     }
 }
  @media screen and (orientation: landscape) and (max-width:750px) {
